# carousel-uav-experiments

./: README.md
results/analysis/: setpoint_delay_analysis.ipynb  yaw_rate_analysis.ipynb
results/analysis/.ipynb_checkpoints/: yaw_rate_analysis-checkpoint.ipynb
results/data/setpoint_delays/: setpointInterpktTime_D1_05_12_carroussel_ls2n_noperturb_N1.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_noperturb_N2.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_noperturb_N3.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_1000_N1.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_1000_N2.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_1000_N3.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_100_N1.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_100_N2.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_100_N3.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_1_N1.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_1_N2.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_1_N3.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_2000_N1.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_2000_N2.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_2000_N3.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_4000_N1.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_4000_N2.data  setpointInterpktTime_D1_05_12_carroussel_ls2n_perturb_1000_4000_N3.data  setpointInterpktTime_D1_06_12_double_carrousel_1000_nmessage10000_N1.data  setpointInterpktTime_D1_06_12_double_carrousel_1000_nmessage10000_N2.data  setpointInterpktTime_D1_06_12_double_carrousel_1000_nmessage10000_N3.data  setpointInterpktTime_D1_06_12_double_carrousel_noperturb_N1.data  setpointInterpktTime_D1_06_12_double_carrousel_noperturb_N2.data  setpointInterpktTime_D2_06_12_double_carrousel_1000_nmessage10000_N1.data  setpointInterpktTime_D2_06_12_double_carrousel_1000_nmessage10000_N2.data  setpointInterpktTime_D2_06_12_double_carrousel_1000_nmessage10000_N3.data  setpointInterpktTime_D2_06_12_double_carrousel_noperturb_N1.data  setpointInterpktTime_D2_06_12_double_carrousel_noperturb_N2.data  setpointInterpktTime_D2_06_12_double_carrousel_noperturb_N3.data  unknown.data
results/data/yaw_rates/: 05_12_carroussel_ls2n_noperturb_N1.csv  05_12_carroussel_ls2n_noperturb_N2.csv  05_12_carroussel_ls2n_noperturb_N3.csv  05_12_carroussel_ls2n_perturb_1000_1000_N1.csv  05_12_carroussel_ls2n_perturb_1000_1000_N2.csv  05_12_carroussel_ls2n_perturb_1000_1000_N3.csv  05_12_carroussel_ls2n_perturb_1000_100_N1.csv  05_12_carroussel_ls2n_perturb_1000_100_N2.csv  05_12_carroussel_ls2n_perturb_1000_100_N3.csv  05_12_carroussel_ls2n_perturb_1000_1_N1.csv  05_12_carroussel_ls2n_perturb_1000_1_N2.csv  (+19 more)
src/offboard_control/: CMakeLists.txt  package.xml
src/offboard_control/src/: simple_control_pos.cpp  simple_control_vel.cpp  uwb_formation.cpp
(+42 files in other folders)
