<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_control</name>
  <version>0.1.0</version>
  <description>A Set of ROS2 nodes dedicate to the offboard control of a PX4-based quadricopter. We use the PX4Vision dev kit 1.0 for testing.</description>
  <maintainer email="theotime.balaguer@gmail.com">theotime</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>uwb_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
